css/main.css
html, body {
       height: 100%;
       font-family: Arial;
       background-color: pink;
 }
 

body {
       margin: 0px;
       padding: 0px;
 }
 

div#wrapper {
       min-height: 100%;
       height: auto !important;
       height: 100%;
       margin: 0px 0px -41px 0px;
       
 }
 

li {
  text-align: left;
  padding-left: 5px;
}
 

div#content-wrapper {
       padding: 0px 0px 41px 0px;
       
 }

div#footer-wrapper {
       height: 41px;
       width: 100%;
       background-color: white;
 }

div#footer-wrapper p {
  text-align: center;
}

 div#header {
 	font-size: 3em;
 	font-weight: bold;
 	text-align: center;
 	padding-top: 50px;
 }

 div#header h2:before{
 	content: "\2661";

 }

 div#app, div#form, .shoes {
   border: 1px black solid;
   border-radius: 3px;
   background-color: white;
 }

 div#app{
   background-color: white;
   margin: 0 auto;
   width: 360px;
   height: auto;
   text-align: center;
 }

 .center {
 	text-align: center;
 	font-size: 1.5em;

 }

div#form {
	display: block;
	margin: 0 auto;
	font-weight: bold;
	width: 290px;
	margin-top: 50px;
  text-align: left;
	
}


div#submit {
  text-align: center;
}

.shoes {
  width: 290px;
  height: auto;
  display: block;
  margin: 0 auto;
  margin-top: 5px;
  text-align: left;
}

.name, .price, .store, .trash {
  display: inline-block;
  padding-left: 5px;

}

.trash {
  float: right;
  padding-right: 2px;
}

.name:before {
  content: "Shoe:";
  font-weight: bold;
}

.shoe-box {
  display: block;
  margin: 0 auto;
}

.shoe-box:first-child {
  margin-top: 20px;
}

.shoe-box:last-child {
  margin-bottom: 25px;
}

.twerk {
  display:block;
  margin: 0 auto;
}

